@@ -1,11 +1,16 @@
 cdrkit (1.1.3) UNRELEASED; urgency=low
 
+  [ Eduard Bloch ]
   * Fixed fishing for transfer size in sysfs, now ready for
     /dev/class/scsi_generic contents
   * Dealing with the last newline char when processing
     /proc/sys/dev/cdrom/info contents
   * added some missing or probably missing definitions in
     wodim/CMakeLists.txt, restoring the reading from inf files
+
+  [ Peter Samuelson ]
+  * Clean up Linux-2.6 CD/DVD-R drive detection, for simpler code and
+    slightly clearer error messages.
 
  -- Eduard Bloch <blade@debian.org>  Tue, 23 Jan 2007 19:13:44 +0100
 
